Fix modal spacing for delete app

--- a/src/components/AppsCard/AppsCard.css
+++ b/src/components/AppsCard/AppsCard.css
@@ -1,208 +1,192 @@
 .AppCard {
-    width: 100%;
-    width: 320px;
-    margin: auto;
-    text-align: left;
-    font-family: arial;
-    background: #fff;
-    color: #000000;
-    word-wrap: break-word;
-    background-clip: border-box;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .25rem;
-    height: 200px;
+  width: 100%;
+  width: 320px;
+  margin: auto;
+  text-align: left;
+  font-family: arial;
+  background: #fff;
+  color: #000000;
+  word-wrap: break-word;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  height: 200px;
 }
 
 .AppCardHeader {
-    border: none;
-    outline: 0;
-    text-transform: lowercase;
-    cursor: pointer;
-    font-size: 18px;
-    border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
-    padding: .75rem .2rem .75rem 1.25rem;
-    margin-bottom: 0;
-    border-bottom: 1px solid rgba(0,0,0,.125);
+  border: none;
+  outline: 0;
+  text-transform: lowercase;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+  padding: 0.75rem 0.2rem 0.75rem 1.25rem;
+  margin-bottom: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
+.StatusData {
+  display: grid;
+  grid-gap: 0.5rem;
+  grid-template-columns: repeat(2, auto);
+  align-items: center;
+  height: 100%;
+  width: 3rem;
+}
+.OtherData {
+  display: grid;
+  justify-content: end;
+}
+.StatusData img {
+  height: 1.2rem;
+  justify-self: center;
+}
 
-.StatusData{
-    display: grid;
-    grid-gap: 0.5rem;
-    grid-template-columns: repeat(2, auto);
-    align-items: center;
-    height: 100%;
-    width: 3rem;
-}
-.OtherData{
-    display: grid;
-    justify-content: end;
-}
-.StatusData img{
-    height: 1.2rem;
-    justify-self: center;
-}
-
-.AppTable{
-    width: 100%;
+.AppTable {
+  width: 100%;
 }
 
 .AppTable tr td:last-child {
-    text-align: right;
+  text-align: right;
 }
 
 .AppTable tr td:first-child {
-    text-align: left;
+  text-align: left;
 }
- 
-.AppUrlText {
-    flex: 1 1 auto;
-    padding:  0.5rem 1.25rem ;
-    font-size: 16px;
-    font-weight: normal;
-    box-sizing: border-box;
-    margin-top: 1.5rem;
-    cursor: pointer;
-}
-.AppUrl{
-    flex: 1 1 auto;
-    padding: 0.5rem 1.25rem;
-    cursor: pointer;
-    font-size: 14px;
-    padding-top: 0px;
 
+.AppUrlText {
+  flex: 1 1 auto;
+  padding: 0.5rem 1.25rem;
+  font-size: 16px;
+  font-weight: normal;
+  box-sizing: border-box;
+  margin-top: 1.5rem;
+  cursor: pointer;
+}
+.AppUrl {
+  flex: 1 1 auto;
+  padding: 0.5rem 1.25rem;
+  cursor: pointer;
+  font-size: 14px;
+  padding-top: 0px;
 }
 
 .AppCard .AppCardHeader::first-letter {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
-.AppUrl a{
-    text-decoration: underline;
-    width: 253px;
-    height: 22px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    color: #008AC1;
+.AppUrl a {
+  text-decoration: underline;
+  width: 253px;
+  height: 22px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  color: #008ac1;
 }
 
 .AppTable tr .AppName:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .AppCard:hover {
-    border: 1px solid #F7B21F;
-    box-shadow: 0 1px 2px 0 #F7B21F;
-    transition: 0.5s;
+  border: 1px solid #f7b21f;
+  box-shadow: 0 1px 2px 0 #f7b21f;
+  transition: 0.5s;
 }
 
 .AppUrl:hover {
-    transition: 0.5s;
-    transform: scale(1.02);
+  transition: 0.5s;
+  transform: scale(1.02);
 }
-  
+
 /*/////////////// Drop down ////////////*/
-  
+
 .AppDropDown {
-    position: relative;
-    display: inline-block;
-    z-index: 0;
+  position: relative;
+  display: inline-block;
+  z-index: 0;
 }
-  
+
 .AppDropDownContent {
-    display: block;
-    position: absolute ;
-    background-color: #f1f1f1;
-    min-width: 110px;
-    right: 0;
-    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+  display: block;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 110px;
+  right: 0;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
-  
+
 .AppDropDownContent div {
-    color: black;
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    display: block;
-    font-size: 13px;
-    text-align :left;
+  color: black;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  display: block;
+  font-size: 13px;
+  text-align: left;
 }
 
 .AppDropDownContent div::first-letter {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
-  
-.AppDropDownContent div:hover {background-color: #ddd;}
+.AppDropDownContent div:hover {
+  background-color: #ddd;
+}
 
 .AppDropDown:hover .DropDownImg {
-    transition: 0.5s;
-    opacity: 0.8;
-    transform: scale(1.02);
+  transition: 0.5s;
+  opacity: 0.8;
+  transform: scale(1.02);
 }
-
 
 /*///////////// Delete Model //////////////////*/
 
-.AppDeleteModel{
-    position: fixed;
-    display: hidden!important;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 99999;
-    background-color: rgba(0,0,0,0.5)
+.AppDeleteModel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.AppDeleteModel .ModalParentWrap{
-    background-color: inherit;
+.AppDeleteModel .ModalParentWrap {
+  background-color: inherit;
 }
 
-.AppDeleteModel .ModalChildWrap{
-    width: 20rem;
-    height: unset;
-    min-height: 10rem !important;
-    z-index: 9999;
-    background-color: #f1f1f1;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+.AppDeleteModel .ModalChildWrap {
+  min-height: 10rem;
+  z-index: 3;
 }
 
-.DeleteDescription{
-    cursor: pointer;
-    padding-bottom: 0;
+.DeleteAppModel {
+  display: grid;
+  gap: 3rem;
 }
 
-.DeleteAppModelResponses{
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(2, auto);
-    align-items: center;
+.DeleteModalLowerSection {
+  display: grid;
+  gap: 1rem;
 }
 
-.DeleteAppModelResponses button{
-    display: inline;
+.DeleteDescription {
+  cursor: default;
 }
 
-.DeleteMessageDiv{
-    margin: 1.5rem;
-    text-align: center;
-}
-.DeleteErrorDiv{
-    color: red;
+.DeleteAppModelButtons {
+  display: flex;
+  justify-content: space-between;
 }
 
-.DeleteSuccessDiv{
-    color: green;
+.DeleteAppModelButtons .DeleteBtn {
+  background-color: #ff0000;
+  outline: 2px solid #ff0000;
 }
-
-.DeleteAppModelResponses .undefined{
-    background-color: red;
-    outline: 2px solid red;
-}
-.DeleteAppModelResponses .undefined:hover{
-    background-color: white;
-    outline: 2px solid red;
-    color: red;
+.DeleteAppModelButtons .DeleteBtn:hover {
+  background-color: inherit;
+  outline: 2px solid #ff0000;
+  color: #ff0000;
 }
