--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -119,8 +119,7 @@
 }
 
 .DeleteDescription{
-    cursor: pointer;
-    padding-bottom: 3rem;
+    cursor: default;
 }
 
 .DeleteProjectModelResponses{
